# ruammitr-thailand-map

./: .gitignore  pyproject.toml
data/: mock_data.xlsx  user_province.xlsx  user_region.xlsx
data/geojson/: centroid-merged-updated-thailand-provinces.geojson  merged-updated-thailand-provinces.geojson  thailand-region.geojson
notebooks/mind_notebooks/: mapping_province_id.ipynb  reduce_geo_json_size.ipynb  visualization.ipynb
